Запись отчета в файл

--- a/.install/reports/2016-05-31/report-2016-05-31-14-44.md
+++ b/.install/reports/2016-05-31/report-2016-05-31-14-44.md
@@ -1,10 +1,22 @@
+Отчет по проекту <<Магазин поощрений "активный гражданин">>
+===
+
 
 # Unit-тестирование (пройдено с ошибками)
 
-* Неуспешных тестов тестов: 2;
-* Успешных тестов: 2;
+* Неуспешных тестов тестов: 3;
+* Успешных тестов: 1;
 
 ## Подробно о неуспешных тестах
+
+    not ok 1 - Failure: dbTest::testSQLMode  
+      ---  
+      message: 'Failed asserting that two strings are equal.'  
+      severity: fail  
+      data:  
+          got: ALLOW_INVALID_DATES  
+          expected: ALLOW_INVALID_DATES0  
+      ...  
 
     not ok 2 - Failure: phpTest::testMbstringInternalEncoding  
       ---  
