--- a/docs/manual/source/02_noauth_funcs/index.tex
+++ b/docs/manual/source/02_noauth_funcs/index.tex
@@ -36,7 +36,7 @@
                 \begin{enumerate}
                     \item Placeholder <<поиск>>
                     \item Отправка запроса на поиск по нажатию <<Enter>>
-                    \item Переход на страницу поиска (\ref{search_page}) при отправке формы
+                    \item Переход на страницу поиска (\ref{sec:search_page}) при отправке формы
                 \end{enumerate}
         \subsection{Важные ссылки}
             \label{sec:baseitems_important_links}
@@ -46,12 +46,12 @@
                 \end{enumerate}
             \subsubsection{Часто задаваемые вопросы}
                 \begin{enumerate}
-                    \item Ссылка указывает на страницу <<faq>> (\ref{page_faq})
+                    \item Ссылка указывает на страницу <<faq>> (\ref{sec:page_faq})
                 \end{enumerate}
             \subsubsection{Обратная связь.}
                 \begin{enumerate}
-                    \item Ссылка вызывает модальное окно-форму обратной связи без перезагрузки страницы
-                    \item Форма обратной связи скрывается кликом на кнопку <<отмена>> или по нажатию <<Esc>>
+                    \item Ссылка вызывает модальное окно-\gloss{FBF} без перезагрузки страницы
+                    \item \gloss{FBF} скрывается кликом на кнопку <<отмена>> или по нажатию <<Esc>>
                     \item Форма имеет два поля для заполнения <<тип обращения>> и <<сообщение>>.
                     \item Сообщение не отправляется, если не заполнено поле <<сообщение>>, выводится сообщение с просьбой заполнить это поле
                     \item Сообщение не отправляется, если не выбрано значение в поле <<тип обращения>>, выводится сообщение с просьбой заполнить это поле
@@ -64,13 +64,13 @@
             \label{sec:baseitems_footer_copiright}
             \begin{enumerate}
                 \item Текст <<(C) 2016, Активный гражданин, Все права защищены. Публичная оферта>>
-                \item Ссылка с <<Публичная оферта>> на <<faq>> (\ref{page_faq})
+                \item Ссылка с <<Публичная оферта>> на <<faq>> (\ref{sec:page_faq})
             \end{enumerate}
         \subsection{Меню разделов магазина}
             \begin{enumerate}
                 \item В меню разделов магазина входят только те разделы, которые имеют товары со свойством <<Включено>>(ACTIVE)
                 \item Каждый из пунктов имеет ссылку страницу раздела каталога (2.3) вида /catalog/<траслит имени раздела>/
-                \item Пункт меню активен при нахождении на соответствующей странице раздела каталога (\ref{page_catalog_section})
+                \item Пункт меню активен при нахождении на соответствующей странице раздела каталога (\ref{sec:page_catalog_section})
             \end{enumerate}
         \subsection{Фильтр по цене и интересам}
             \label{sec:baseitems_interest_filter}
@@ -93,16 +93,16 @@
             \item
             Содержит следующие элементы
             \begin{itemize}
-                \item Фиксированная панель слева (см. \ref{baseitems_fixleft_panel})
-                \item Главное меню (см. \ref{baseitems_main_meu})
-                \item Банер-слайдер (см. \ref{slider})
-                \item Фильтр по цене и интересам (см. \ref{baseitems_interest_filter})
-                \item Ссылки фильтра по свойствам (см. \ref{baseitems_props_filter})
-                \item Ссылки сортировки списка тизеров товаров (см. \ref{baseitems_goods_sort})
-                \item Область вывода тизеров товаров (см. \ref{baseitems_goods_area})
-                \item Кнопка подгрузки.  (см. \ref{baseitems_goods_more})
-                \item Важные ссылки (см. \ref{baseitems_important_links})
-                \item Копирайт (см. \ref{baseitems_footer_copiright})
+                \item Фиксированная панель слева (см. \ref{sec:baseitems_fixleft_panel})
+                \item Главное меню (см. \ref{sec:baseitems_main_meu})
+                \item Баннер-слайдер (см. \ref{sec:slider})
+                \item Фильтр по цене и интересам (см. \ref{sec:baseitems_interest_filter})
+                \item Ссылки фильтра по свойствам (см. \ref{sec:baseitems_props_filter})
+                \item Ссылки сортировки списка тизеров товаров (см. \ref{sec:baseitems_goods_sort})
+                \item Область вывода тизеров товаров (см. \ref{sec:baseitems_goods_area})
+                \item Кнопка подгрузки.  (см. \ref{sec:baseitems_goods_more})
+                \item Важные ссылки (см. \ref{sec:baseitems_important_links})
+                \item Копирайт (см. \ref{sec:baseitems_footer_copiright})
             \end{itemize}
         \end{enumerate}
     
@@ -111,13 +111,13 @@
             
             \begin{enumerate}
                 \item В слайдере крутятся 2 вида слайдов: слайды-картинки и слайды-товары
-                \item Тип слайда задаётся в CMS
+                \item Тип слайда задаётся в \gloss{CMS}
             \end{enumerate}
             
             \subsubsection{Слайды-картинки}
                 \paragraph{Изображение}
                     \begin{enumerate}
-                        \item Картинка для отображения загружается в CMS
+                        \item Картинка для отображения загружается в \gloss{CMS}
                         \item Картинка должна быть с соотношением сторон 87:50
                         \item Если при ином соотношении сторон картинка выводится таким образом, чтобы полностью заполнять слайд
                     \end{enumerate}
@@ -176,7 +176,7 @@
             \label{sec:rules_hiw}
         \subsection{Адреса}
         \subsection{FAQ}
-            \label{page_faq}
+            \label{sec:page_faq}
 
     \section{Страница поиска}
         \label{search_page}
