--- a/docs/manual/source/index.bib
+++ b/docs/manual/source/index.bib
@@ -1,12 +1,42 @@
 @gd{CMS,
 word={CMS},
-definition={Система управления контентом}
+definition={Система управления контентом. Специальный раздел магазина, предназначенный для манипулирования объектами, отображаемыми на
+сайте. Например банерами, текстом на страницах и пр. Вход защищен авторизацией и расположен по адресу /bitrix/admin/}
 }
 
 @gd{FBF,
 word={ФОС},
-definition={Форма обратной связи}
+definition={Форма обратной связи. Предназначена для отправки сообщений администрации магазина. Сообщения приходят на
+почту администратору магазина и записываются в БД, откуда могут быть прочитаны через \gloss{CMS}}
 }
 
+@gd{goods_tizer,
+word={Тизер товара},
+definition={Элемент интерфейса, содержащий краткую информацию о товаре. Является элементом области вывода тизеров, в
+корой располагаеся в виде плитки. см. рис. \ref{fig:common_items_4} и \ref{fig:common_items_5}}
+}
+
+@gd{shop_admin,
+word={Администратор магазина},
+definition={Пользователь \gloss{CMS} имеющий доступ ко всем её функциям}
+}
+
+@gd{content_editor,
+word={Редактор контента},
+definition={Пользователь \gloss{CMS} имеющий доступ к функциям редактирования содержимого 
+информационных разделов (\ref{sec:rules_hiw}, \ref{sec:page_faq}, \ref{sec:slider})}
+}
+
+@gd{auth_user,
+word={Авторизованный пользователь},
+definition={Пользователь авторизованный в магазине через описанную в разделе \ref{sec:auth} процедуру. }
+
+}
+
+@gd{AG,
+word={АГ},
+definition={web-сайт <<активный гражданин>>}
+
+}
 
 
