--- a/docs/manual/source/index.bib
+++ b/docs/manual/source/index.bib
@@ -17,7 +17,7 @@ definition={Элемент интерфейса, содержащий кратк
 }
 
 @gd{shop_admin,
-word={администратор магазина},
+word={Администратор магазина},
 definition={Пользователь \gloss{CMS} имеющий доступ ко всем её функциям}
 }
 
